# parachuter

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: parachuter.toml
crates/parachuter/: Cargo.toml
crates/parachuter/src/: chunker.rs  config.rs  ctl.rs  error.rs  ledger.rs  lib.rs  main.rs  monitor.rs  rate_limiter.rs  reassembler.rs  receiver.rs  transport.rs
crates/parachuter/src/cleaner/: dedup.rs  mod.rs
crates/parachuter/src/control/: client.rs  messages.rs  mod.rs  server.rs
crates/parachuter/src/proto/: mod.rs  packets.rs
crates/parachuter/src/sender/: mod.rs  queue.rs  scanner.rs  state.rs
crates/parachuter/tests/: end_to_end.rs
docs/: DESIGN.md
