[workspace]
resolver = "2"
members = [
    "crates/parachuter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "LicenseRef-Custom-NonCommercial"
authors = ["Emaad Paracha <emaadparacha@gmail.com>"]
repository = "https://github.com/emaadparacha/parachuter"
homepage = "https://github.com/emaadparacha/parachuter"
documentation = "https://docs.rs/parachuter"
description = "Reliable, rate-limited file downlink over lossy unidirectional UDP links."
readme = "README.md"
keywords = ["udp", "file-transfer", "downlink", "satellite", "networking"]
categories = ["network-programming", "filesystem", "command-line-utilities", "science"]

[workspace.dependencies]
parachuter = { path = "crates/parachuter", version = "0.1.0" }

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
anyhow = "1.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Filesystem watcher (hot config reload)
notify = "6.1"

# Time / chrono
chrono = { version = "0.4", features = ["serde"] }

# Checksum
crc32fast = "1.4"

# Walking directories
walkdir = "2.5"

# Tokio (async runtime, used selectively)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal", "fs"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
